--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="bill">
           <p class="text-primary">Bill</p>
           <div class="input-container">
-            <img src="images/icon-dollar.svg" class="icon" />
+            <img src="images/icon-dollar.svg" class="icon" alt="an icon of a dollar sign"/>
             <input
               oninput="countingTipAmount()"
               type="number"
@@ -98,7 +98,7 @@
             <p class="text-primary error-message"></p>
           </div>
           <div class="input-container">
-            <img src="images/icon-person.svg" class="icon" />
+            <img src="images/icon-person.svg" class="icon" alt="an icon of a person"/>
             <input
               type="number"
               class="number-input input"
